added kafka to publish device data

--- a/ingest/src/main/resources/akka.conf
+++ b/ingest/src/main/resources/akka.conf
@@ -10,3 +10,24 @@ akka {
   }
 
 }
+
+
+kafka {
+  broker.list = "localhost:9092"
+  client.id = "milo-ingest"
+
+  producer{
+    // defaults
+    message.send.max.retries = 3
+    request.required.acks = -1
+    producer.type = sync
+  }
+
+  consumer{
+    zookeeper.connect = "localhost:2181"
+    // defaults
+    auto.offset.reset = smallest
+    consumer.timeout.ms = 1500
+    offsets.storage = zookeeper
+  }
+}
