Add reminder to configuration files

--- a/ingest/src/main/resources/application.conf
+++ b/ingest/src/main/resources/application.conf
@@ -5,7 +5,11 @@ milo {
   server {
 
     interface = localhost
-    port      = 8080
+
+    ## This port is forwarded in
+    ## Vagrant configuration and Docker build settings
+    ## Don't forget to reflect any possible changes
+    port = 8080
 
   }
 }
